samples/_failures_safe/1761347032_782967_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee36e9d9.c: In function ‘parse_string’:
./samples/SAFE/__tmp_ee36e9d9.c:170:9: error: expected identifier at end of input
  170 |         tokenizer->
      |         ^~~~~~~~~
./samples/SAFE/__tmp_ee36e9d9.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ee36e9d9.c:170:9: error: expected declaration or statement at end of input
